--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "validator": "^13.11.0"
   },
   "devDependencies": {
