--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "flowbite": "^1.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
