--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "autoprefixer": "^10.4.16",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -22,6 +23,7 @@
     "express-session": "^1.17.3",
     "flowbite": "^1.8.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
